tweak nomenclature / method names

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -42,7 +42,7 @@
     </section>
     <section id="summary">
       <h2>Summary</h2>
-      <div class="summaries"></div>
+      <div class="features"></div>
     </section>
   </body>
   <script src="/lib/leaflet-0.7.7/leaflet.js"></script>
