change param names

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -23,18 +23,18 @@
           <input type="text" id="eqid" />
         </label>
         <h3>Aftershocks</h3>
-        <label for="ashockDistance">
+        <label for="aftershocks-dist">
           <p>Max distance from mainshock (km)</p>
-          <input type="text" id="ashockDistance" value="" />
+          <input type="text" id="aftershocks-dist" value="" />
         </label>
         <h3>Historical Seismicity</h3>
-        <label for="histDistance">
+        <label for="historical-dist">
           <p>Max distance from mainshock (km)</p>
-          <input type="text" id="histDistance" value="" />
+          <input type="text" id="historical-dist" value="" />
         </label>
-        <label for="histYears">
+        <label for="historical-years">
           <p>Max time before mainshock (years)</p>
-          <input type="text" id="histYears" value="10">
+          <input type="text" id="historical-years" value="10">
         </label>
       </form>
     </section>
