add classes to form inputs

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -25,16 +25,16 @@
         <h3>Aftershocks</h3>
         <label for="aftershocks-dist">
           <p>Max distance from mainshock (km)</p>
-          <input type="text" id="aftershocks-dist" value="" />
+          <input type="text" id="aftershocks-dist" class="aftershocks" value="" />
         </label>
         <h3>Historical Seismicity</h3>
         <label for="historical-dist">
           <p>Max distance from mainshock (km)</p>
-          <input type="text" id="historical-dist" value="" />
+          <input type="text" id="historical-dist" class="historical" value="" />
         </label>
         <label for="historical-years">
           <p>Max time before mainshock (years)</p>
-          <input type="text" id="historical-years" value="10">
+          <input type="text" id="historical-years" class="historical" value="10">
         </label>
       </form>
     </section>
