--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -19,7 +19,7 @@
       <h2>Edit</h2>
       <form>
         <label for="eqid">
-          <p>Earthquake id</p>
+          <h3>Earthquake id</h3>
           <input type="text" id="eqid" />
         </label>
         <h3>Aftershocks</h3>
