change nomenclature of id and tag values

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
-    <div id="toolbar">
-      <ul id="nav" class="panes">
+    <header>
+      <ul id="navigation" class="panes">
         <li><a href="#edit">Edit</a></li>
         <li><a href="#map">Map</a></li>
         <li><a href="#summary">Summary</a></li>
       </ul>
-    </div>
+    </header>
     <section id="edit" class="pane">
       <h2>Edit</h2>
       <form>
