--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -46,6 +46,7 @@
       <h2>Summary</h2>
       <div class="features"></div>
     </section>
+    <div id="loading" class="hide"></div>
   </body>
   <script src="/lib/leaflet-0.7.7/leaflet.js"></script>
   <script src="js/index.js"></script>
