--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -26,26 +26,29 @@
           Seismicity</li>
         <li>Click the &lsquo;Map&rsquo; or &lsquo;Summary&rsquo; tab</li>
       </ol>
-      <form>
-        <label for="eqid">
-          <h3>Earthquake id</h3>
-        </label>
-        <input type="text" id="eqid" />
-        <h3>Aftershocks</h3>
-        <label for="aftershocks-dist">
-          <p>Max distance from mainshock (km)</p>
-        </label>
-        <input type="text" id="aftershocks-dist" class="aftershocks" value="" />
-        <h3>Historical Seismicity</h3>
-        <label for="historical-dist">
-          <p>Max distance from mainshock (km)</p>
-        </label>
-        <input type="text" id="historical-dist" class="historical" value="" />
-        <label for="historical-years">
-          <p>Max time before mainshock (years)</p>
-        </label>
-        <input type="text" id="historical-years" class="historical" value="10">
-      </form>
+      <div class="earthquake">
+        <form>
+          <label for="eqid">
+            <h3>Earthquake id</h3>
+          </label>
+          <input type="text" id="eqid" />
+          <h3>Aftershocks</h3>
+          <label for="aftershocks-dist">
+            <p>Max distance from mainshock (km)</p>
+          </label>
+          <input type="text" id="aftershocks-dist" class="aftershocks" value="" />
+          <h3>Historical Seismicity</h3>
+          <label for="historical-dist">
+            <p>Max distance from mainshock (km)</p>
+          </label>
+          <input type="text" id="historical-dist" class="historical" value="" />
+          <label for="historical-years">
+            <p>Max time before mainshock (years)</p>
+          </label>
+          <input type="text" id="historical-years" class="historical" value="10">
+        </form>
+        <div class="details"></div>
+      </div>
       <p>
         <a href="http://earthquake.usgs.gov/data/comcat/data-availability.php">
         ComCat Documentation - Data Availability</a>
