--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -19,15 +19,15 @@
       <h1>Earthquake Response App</h1>
       <p>This web application creates a map and summary to help collect and
         digest information used in talking points and scientific response.</p>
-      <h2>Instructions</h2>
+      <h3>Instructions</h3>
       <ol>
         <li>Enter an Earthquake id</li>
         <li>Optionally tweak the parameters for Aftershocks / Historical
           Seismicity</li>
         <li>Click the &lsquo;Map&rsquo; or &lsquo;Summary&rsquo; tab</li>
       </ol>
-      <div class="earthquake">
-        <form>
+      <div class="mainshock">
+        <form class="column">
           <label for="eqid">
             <h3>Earthquake id</h3>
           </label>
@@ -47,11 +47,12 @@
           </label>
           <input type="text" id="historical-years" class="historical" value="10">
         </form>
-        <div class="details"></div>
+        <div class="column details"></div>
       </div>
       <p>
+        Earthquake data is from ComCat:
         <a href="http://earthquake.usgs.gov/data/comcat/data-availability.php">
-        ComCat Documentation - Data Availability</a>
+          ComCat Documentation - Data Availability</a>.
       </p>
     </section>
     <section id="map" class="pane">
