change input type to number

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -36,16 +36,16 @@
           <label for="aftershocks-dist">
             <p>Max distance from mainshock (km)</p>
           </label>
-          <input type="text" id="aftershocks-dist" class="aftershocks" value="" />
+          <input type="number" id="aftershocks-dist" class="aftershocks" value="" />
           <h3>Historical Seismicity</h3>
           <label for="historical-dist">
             <p>Max distance from mainshock (km)</p>
           </label>
-          <input type="text" id="historical-dist" class="historical" value="" />
+          <input type="number" id="historical-dist" class="historical" value="" />
           <label for="historical-years">
             <p>Max time before mainshock (years)</p>
           </label>
-          <input type="text" id="historical-years" class="historical" value="10">
+          <input type="number" id="historical-years" class="historical" value="10">
         </form>
         <div class="column details"></div>
       </div>
