--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -47,6 +47,13 @@
           </label>
           <input type="number" id="historical-years" class="historical" value="10">
         </form>
+        <div class="column eqid">
+          <h3>Find an Earthquake</h3>
+          <ul>
+            <li><a href="http://earthquake.usgs.gov/earthquakes/map">Latest Earthquakes</a></li>
+            <li><a href="http://earthquake.usgs.gov/earthquakes/search">Search Earthquake Archives</a></li>
+          </ul>
+        </div>
         <div class="column details"></div>
       </div>
       <p>
