--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -28,28 +28,29 @@
         <li>Click the &lsquo;Map&rsquo; or &lsquo;Summary&rsquo; tab</li>
       </ol>
       <div class="mainshock">
-        <form class="column">
+        <form class="column" autocomplete="off">
           <label for="eqid">
             <h3>Earthquake id</h3>
           </label>
-          <input type="text" id="eqid" required="required" value="" />
+          <input type="text" id="eqid" required="required" value=""
+            autocomplete="off" />
           <h3>Aftershocks</h3>
           <label for="aftershocks-dist">
             <p>Max distance from mainshock (km)</p>
           </label>
           <input type="number" id="aftershocks-dist" class="aftershocks"
-            required="required" pattern="^[0-9.]+$" value="" />
+            required="required" pattern="^[0-9.]+$" value="" autocomplete="off" />
           <h3>Historical Seismicity</h3>
           <label for="historical-dist">
             <p>Max distance from mainshock (km)</p>
           </label>
           <input type="number" id="historical-dist" class="historical"
-            required="required" pattern="^[0-9.]+$" value="" />
+            required="required" pattern="^[0-9.]+$" value="" autocomplete="off" />
           <label for="historical-years">
             <p>Max time before mainshock (years)</p>
           </label>
           <input type="number" id="historical-years" class="historical"
-            required="required" pattern="^[0-9.]+$" value="10">
+            required="required" pattern="^[0-9.]+$" value="10" autocomplete="off">
         </form>
         <div class="column eqid">
           <h3>Find an Earthquake</h3>
