update css class name

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -52,7 +52,7 @@
           <input type="number" id="historical-years" class="historical"
             required="required" pattern="^[0-9.]+$" value="10" autocomplete="off">
         </form>
-        <div class="column eqid">
+        <div class="column find">
           <h3>Find an Earthquake</h3>
           <ul>
             <li><a href="http://earthquake.usgs.gov/earthquakes/map">Latest Earthquakes</a></li>
