--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -22,10 +22,10 @@
       <h3>Instructions</h3>
       <ol>
         <li>Enter the <strong>Mainshock</strong> Event id</li>
-        <li>Optionally tweak the parameters for <strong>Aftershocks</strong> /
+        <li>Optional: tweak the parameters for <strong>Aftershocks</strong> /
           <strong>Historical Seismicity</strong> (if empty, values will be set
           automatically based on mainshock&rsquo;s magnitude)</li>
-        <li>Click the &lsquo;Map&rsquo; or &lsquo;Summary&rsquo; tab</li>
+        <li>Click the &lsquo;Map&rsquo; or &lsquo;Summary&rsquo; tab (above)</li>
       </ol>
       <div class="mainshock">
         <form class="column">
