--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -31,25 +31,26 @@
         <form class="column">
           <h3>Mainshock</h3>
           <label for="eqid">
-            <p>Event id</p>
+            <p>Event id (2 letters followed by 8 characters)</p>
           </label>
-          <input type="text" id="eqid" required="required" value="" />
+          <input type="text" id="eqid" required="required" value=""
+            pattern="^[a-zA-Z]{2}[a-zA-Z0-9]{8}$" />
           <h3>Aftershocks</h3>
           <label for="aftershocks-dist">
             <p>Max distance from mainshock (km)</p>
           </label>
-          <input type="number" id="aftershocks-dist" class="aftershocks"
+          <input type="number" id="aftershocks-dist" class="aftershocks" min="1"
             required="required" pattern="^[0-9.]+$" value="" autocomplete="off" />
           <h3>Historical Seismicity</h3>
           <label for="historical-dist">
             <p>Max distance from mainshock (km)</p>
           </label>
-          <input type="number" id="historical-dist" class="historical"
+          <input type="number" id="historical-dist" class="historical" min="1"
             required="required" pattern="^[0-9.]+$" value="" autocomplete="off" />
           <label for="historical-years">
             <p>Max time before mainshock (years)</p>
           </label>
-          <input type="number" id="historical-years" class="historical"
+          <input type="number" id="historical-years" class="historical" min="1"
             required="required" pattern="^[0-9.]+$" value="10" autocomplete="off">
         </form>
         <div class="column find">
