--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Earthquake Response App</title>
-    <link rel="stylesheet" href="/lib/leaflet-0.7.7/leaflet.css" />
+    <link rel="stylesheet" href="lib/leaflet-0.7.7/leaflet.css" />
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
@@ -76,6 +76,6 @@
     </section>
     <div id="loading" class="hide"></div>
   </body>
-  <script src="/lib/leaflet-0.7.7/leaflet.js"></script>
+  <script src="lib/leaflet-0.7.7/leaflet.js"></script>
   <script src="js/index.js"></script>
 </html>
