--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -57,8 +57,10 @@
         <div class="column find">
           <h3>Find an Earthquake</h3>
           <ul>
-            <li><a href="http://earthquake.usgs.gov/earthquakes/map">Latest Earthquakes</a></li>
-            <li><a href="http://earthquake.usgs.gov/earthquakes/search">Search Earthquake Archives</a></li>
+            <li><a href="http://earthquake.usgs.gov/earthquakes/map">Latest
+              Earthquakes</a></li>
+            <li><a href="http://earthquake.usgs.gov/earthquakes/search">Search
+              Earthquake Archives</a></li>
           </ul>
         </div>
         <div class="column details"></div>
