add note about obtaining event id

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -22,7 +22,11 @@
         digest information used in talking points and scientific response.</p>
       <h3>Instructions</h3>
       <ol>
-        <li>Enter the <strong>Mainshock</strong> Event id</li>
+        <li>Enter the <strong>Mainshock</strong> Event id. You can find an
+          Event id in the URL of an Event page for a specific earthquake. For
+          example: <img src="/img/eventid.png" alt="image showing the URL"
+          class="eventid" />
+        </li>
         <li>Optional: tweak the parameters for <strong>Aftershocks</strong> /
           <strong>Historical Seismicity</strong> (if empty, values will be set
           automatically based on mainshock&rsquo;s magnitude)</li>
