update path to img

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -24,7 +24,7 @@
       <ol>
         <li>Enter the <strong>Mainshock</strong> Event id. You can find an
           Event id in the URL of an Event page for a specific earthquake. For
-          example: <img src="/img/eventid.png" alt="image showing the URL"
+          example: <img src="img/eventid.png" alt="image showing the URL"
           class="eventid" />
         </li>
         <li>Optional: tweak the parameters for <strong>Aftershocks</strong> /
