add punctuation in instructions

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -28,9 +28,9 @@
           class="eventid" />
         </li>
         <li>Optional: tweak the parameters for <strong>Aftershocks</strong> /
-          <strong>Historical Seismicity</strong> (if empty, values will be set
-          automatically based on mainshock&rsquo;s magnitude)</li>
-        <li>Click the &lsquo;Map&rsquo; or &lsquo;Summary&rsquo; tab (above)</li>
+          <strong>Historical Seismicity</strong>. (If empty, values will be set
+          automatically based on mainshock&rsquo;s magnitude.)</li>
+        <li>Click the &lsquo;Map&rsquo; or &lsquo;Summary&rsquo; tab (above).</li>
       </ol>
       <div class="mainshock">
         <form class="column">
