move find eq links to instructions

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -26,6 +26,13 @@
           Event id in the URL of an Event page for a specific earthquake. For
           example: <img src="img/eventid.png" alt="image showing the URL"
           class="eventid" />
+          <h4>Find an Earthquake:</h4>
+          <ul class="find">
+            <li><a href="http://earthquake.usgs.gov/earthquakes/map">Latest
+              Earthquakes</a></li>
+            <li><a href="http://earthquake.usgs.gov/earthquakes/search">Search
+              Earthquake Archives</a></li>
+          </ul>
         </li>
         <li>Optional: tweak the parameters for <strong>Aftershocks</strong> /
           <strong>Historical Seismicity</strong>. (If empty, values will be set
@@ -58,15 +65,6 @@
           <input type="number" id="historical-years" class="historical" min="1"
             required="required" pattern="^[0-9.]+$" value="10" autocomplete="off">
         </form>
-        <div class="column find">
-          <h3>Find an Earthquake</h3>
-          <ul>
-            <li><a href="http://earthquake.usgs.gov/earthquakes/map">Latest
-              Earthquakes</a></li>
-            <li><a href="http://earthquake.usgs.gov/earthquakes/search">Search
-              Earthquake Archives</a></li>
-          </ul>
-        </div>
         <div class="column details"></div>
       </div>
       <p>
