--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,
       maximum-scale=1.0, user-scalable=0" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Earthquake Response App</title>
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="lib/leaflet-0.7.7/leaflet.css" />
     <link rel="stylesheet" href="css/index.css" />
   </head>
