switch links to https

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -30,9 +30,9 @@
           class="eventid" />
           <h4>Find an Earthquake:</h4>
           <ul class="find">
-            <li><a href="http://earthquake.usgs.gov/earthquakes/map">Latest
+            <li><a href="https://earthquake.usgs.gov/earthquakes/map">Latest
               Earthquakes</a></li>
-            <li><a href="http://earthquake.usgs.gov/earthquakes/search">Search
+            <li><a href="https://earthquake.usgs.gov/earthquakes/search">Search
               Earthquake Archives</a></li>
           </ul>
         </li>
@@ -71,7 +71,7 @@
       </div>
       <p>
         Earthquake data is from ComCat:
-        <a href="http://earthquake.usgs.gov/data/comcat/data-availability.php">
+        <a href="https://earthquake.usgs.gov/data/comcat/data-availability.php">
           ComCat Documentation - Data Availability</a>.
       </p>
     </section>
