--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -16,31 +16,13 @@
         <li><a href="#edit">Edit</a></li>
         <li><a href="#map">Map</a></li>
         <li><a href="#summary">Summary</a></li>
+        <li><a href="#help">Help</a></li>
       </ul>
     </header>
     <section id="edit" class="pane">
       <h1>Earthquake Response App</h1>
       <p>This web application creates a map and summary to help collect and
         digest information used in talking points and scientific response.</p>
-      <h3>Instructions</h3>
-      <ol>
-        <li>Enter the <strong>Mainshock</strong> Event id. You can find an
-          Event id in the URL of an Event page for a specific earthquake. For
-          example: <img src="img/eventid.png" alt="image showing the URL"
-          class="eventid" />
-          <h4>Find an Earthquake:</h4>
-          <ul class="find">
-            <li><a href="https://earthquake.usgs.gov/earthquakes/map">Latest
-              Earthquakes</a></li>
-            <li><a href="https://earthquake.usgs.gov/earthquakes/search">Search
-              Earthquake Archives</a></li>
-          </ul>
-        </li>
-        <li>Optional: tweak the parameters for <strong>Aftershocks</strong> /
-          <strong>Historical Seismicity</strong>. (If empty, values will be set
-          automatically based on mainshock&rsquo;s magnitude.)</li>
-        <li>Click the &lsquo;Map&rsquo; or &lsquo;Summary&rsquo; tab (above).</li>
-      </ol>
       <div class="mainshock">
         <form class="column">
           <h3>Mainshock</h3>
@@ -80,6 +62,30 @@
     </section>
     <section id="summary" class="pane">
       <div class="features"></div>
+    </section>
+    <section id="help" class="pane">
+      <h2>Instructions</h2>
+      <ol>
+        <li>Enter the <em>Mainshock</em> Event ID
+          <p>You can find an Event ID in the URL of an Event Page for a
+            specific earthquake. For example:
+            <img src="img/eventid.png" alt="image showing the URL"
+            class="eventid" />
+          <h3>Find an Earthquake:</h3>
+          <ul class="find">
+            <li><a href="https://earthquake.usgs.gov/earthquakes/map">Latest
+              Earthquakes</a></li>
+            <li><a href="https://earthquake.usgs.gov/earthquakes/search">Search
+              Earthquake Archives</a></li>
+          </ul>
+        </li>
+        <li>Tweak the parameters for <em>Aftershocks</em> /
+          <em>Historical Seismicity</em> <strong>(optional)</strong>
+          <p>If empty, values will be set automatically based on the
+            mainshock&rsquo;s magnitude and rupture length.</p>
+        </li>
+        <li>Select the &lsquo;Map&rsquo; or &lsquo;Summary&rsquo; tab</li>
+      </ol>
     </section>
     <div id="loading" class="hide"></div>
   </body>
