add reset button

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -47,7 +47,8 @@
             <p>Max time before mainshock (years)</p>
           </label>
           <input type="number" id="historical-years" class="historical" min="1"
-            required="required" pattern="^[0-9.]+$" value="10" autocomplete="off">
+            required="required" pattern="^[0-9.]+$" value="10" autocomplete="off" />
+          <input type="reset" value="Reset" class="reset" />
         </form>
         <div class="column details"></div>
       </div>
