add all fields reqd text

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -48,6 +48,7 @@
           </label>
           <input type="number" id="historical-years" class="historical" min="1"
             required="required" pattern="^[0-9.]+$" value="10" autocomplete="off" />
+          <p>* All fields are required</p>
           <input type="reset" value="Reset" class="reset" />
         </form>
         <div class="column details"></div>
