--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -22,12 +22,14 @@
     <section id="edit" class="pane">
       <h1>Earthquake Response App</h1>
       <p>This web application creates a map and summary to help collect and
-        digest information used in talking points and scientific response.</p>
+        digest information used in talking points and scientific response.
+        Enter the <em>Mainshock</em> Event ID, then select &lsquo;Map&rsquo; or
+        &lsquo;Summary&rsquo;.</p>
       <div class="mainshock">
         <form class="column">
           <h3>Mainshock</h3>
           <label for="eqid">
-            <p>Event id (2 letters followed by 8 characters)</p>
+            <p>Event ID (2 letters followed by 8 characters)</p>
           </label>
           <input type="text" id="eqid" required="required" value=""
             pattern="^[a-zA-Z]{2}[a-zA-Z0-9]{8}$" />
