always set default values, even if they are not empty

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -85,7 +85,7 @@
         </li>
         <li>Tweak the parameters for <em>Aftershocks</em> /
           <em>Historical Seismicity</em> <strong>(optional)</strong>
-          <p>If empty, values will be set automatically based on the
+          <p>Initial values will be set automatically based on the
             mainshock&rsquo;s magnitude and estimated rupture length.</p>
         </li>
         <li>Select the &lsquo;Map&rsquo; or &lsquo;Summary&rsquo; tab</li>
