--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -78,6 +78,9 @@
     </section>
     <section id="help" class="pane">
       <div class="content lighter">
+        <h1>Earthquake Response App</h1>
+        <p>This web application creates a map and summary to help collect and
+          digest information used in talking points and scientific response.</p>
         <h2>Instructions</h2>
         <ol>
           <li>Enter the <em>Mainshock</em> Event ID
