bugfix: form reset button was not working

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -59,9 +59,11 @@
               pattern="^[0-9.]+$" value="10" autocomplete="off" />
           </div>
           <div class="details"></div>
+          <div class="meta">
+            <input type="reset" class="reset" value="Reset" />
+            <p class="required">* All fields are required</p>
+          </div>
         </form>
-        <p class="required">* All fields are required</p>
-        <input type="reset" class="reset" value="Reset" />
       </div>
       <div class="content lighter">
         <p class="comcat">Earthquake data is from ComCat:
