add Contact info to help pane

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -107,6 +107,11 @@
           </li>
           <li>Select the &lsquo;Map&rsquo; or &lsquo;Summary&rsquo; tab</li>
         </ol>
+        <h2>Contact</h2>
+        <ul>
+          <li><a href="mailto:shaefner@usgs.gov">Scott Haefner</a></li>
+          <li><a href="mailto:baagaard@usgs.gov">Brad Aagaard</a></li>
+        </ul>
       </div>
     </section>
     <div id="loading" class="hide"></div>
