bugfix: remove autocomplete attr bc it makes Safari "forget" values when navigating away from app

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -44,7 +44,7 @@
               <p>Max distance from mainshock (km)</p>
             </label>
             <input type="number" min="1" id="aftershocks-dist" required="required"
-              pattern="^[0-9.]+$" value="" autocomplete="off" />
+              pattern="^[0-9.]+$" value="" />
           </div>
           <div class="historical">
             <h3>Historical Seismicity</h3>
@@ -52,12 +52,12 @@
               <p>Max distance from mainshock (km)</p>
             </label>
             <input type="number" min="1" id="historical-dist" required="required"
-              pattern="^[0-9.]+$" value="" autocomplete="off" />
+              pattern="^[0-9.]+$" value="" />
             <label for="historical-years">
               <p>Max time before mainshock (years)</p>
             </label>
             <input type="number" min="1" id="historical-years" required="required"
-              pattern="^[0-9.]+$" value="10" autocomplete="off" />
+              pattern="^[0-9.]+$" value="10" />
           </div>
           <div class="meta">
             <input type="reset" class="reset" value="Reset" />
