Add minimum magnitude for aftershocks and historical seismicity.
Events in areas with a high rate of seismicity can lead to requests
exceeding the max number of events limit (20,000). Using a default value
of 3.0 for a minimum magnitude for historical events works quite well.

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -45,6 +45,11 @@
             </label>
             <input type="number" min="1" id="aftershocks-dist" required="required"
               pattern="^[0-9.]+$" value="" />
+            <label for="aftershocks-minmag">
+              <p>Min magnitude</p>
+            </label>
+            <input type="number" min="0" id="aftershocks-minmag" required="required"
+              pattern="^[0-9.]+$" value="0.0" />
           </div>
           <div class="historical">
             <h3>Historical Seismicity</h3>
@@ -58,6 +63,11 @@
             </label>
             <input type="number" min="1" id="historical-years" required="required"
               pattern="^[0-9.]+$" value="10" />
+            <label for="historical-minmag">
+              <p>Min magnitude</p>
+            </label>
+            <input type="number" min="0" id="historical-minmag" required="required"
+              pattern="^[0-9.]+$" value="3.0" />
           </div>
           <div class="meta">
             <input type="reset" class="reset" value="Reset" />
