rename hash / id values to match names of Classes

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -13,13 +13,13 @@
   <body>
     <header>
       <ul id="navigation" class="panes">
-        <li><a href="#edit">Edit</a></li>
-        <li><a href="#map">Map</a></li>
-        <li><a href="#summary">Summary</a></li>
-        <li><a href="#help">Help</a></li>
+        <li><a href="#editPane">Edit</a></li>
+        <li><a href="#mapPane">Map</a></li>
+        <li><a href="#summaryPane">Summary</a></li>
+        <li><a href="#helpPane">Help</a></li>
       </ul>
     </header>
-    <section id="edit" class="pane">
+    <section id="editPane" class="pane">
       <div class="content lighter">
         <h1>Earthquake Response App</h1>
         <p>This web application creates a map and summary to help collect and
@@ -82,13 +82,13 @@
         </p>
       </div>
     </section>
-    <section id="map" class="pane">
+    <section id="mapPane" class="pane">
       <div class="map"></div>
     </section>
-    <section id="summary" class="pane">
+    <section id="summaryPane" class="pane">
       <div class="features"></div>
     </section>
-    <section id="help" class="pane">
+    <section id="helpPane" class="pane">
       <div class="content lighter">
         <h1>Earthquake Response App</h1>
         <p>This web application creates a map and summary to help collect and
