rename Navitation, LoadingModule classes

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <ul id="navigation" class="panes">
+      <ul id="navBar" class="panes">
         <li><a href="#editPane">Edit</a></li>
         <li><a href="#mapPane">Map</a></li>
         <li><a href="#summaryPane">Summary</a></li>
@@ -124,7 +124,7 @@
         </ul>
       </div>
     </section>
-    <div id="loading" class="hide"></div>
+    <div id="statusBar" class="hide"></div>
   </body>
   <script src="lib/leaflet-0.7.7/leaflet.js"></script>
   <script src="js/index.js"></script>
