add github link

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -101,7 +101,7 @@
             <p>You can find an Event ID in the URL of an Event Page for a
               specific earthquake. For example:</p>
               <img src="img/eventid.png" alt="image showing the URL"
-              class="eventid" />
+                class="eventid" />
             <h3>Find an Earthquake:</h3>
             <ul class="find">
               <li><a href="https://earthquake.usgs.gov/earthquakes/map">Latest
@@ -122,6 +122,10 @@
           <li><a href="mailto:shaefner@usgs.gov">Scott Haefner</a></li>
           <li><a href="mailto:baagaard@usgs.gov">Brad Aagaard</a></li>
         </ul>
+        <p class="github">
+          <a href="https://github.com/shaefner-usgs/esc-eq-response">Github
+            repository</a>
+        </p>
       </div>
     </section>
     <div id="statusBar" class="hide"></div>
