--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -15,6 +15,7 @@
       <ul id="navBar" class="panes">
         <li><a href="#editPane">Edit</a></li>
         <li><a href="#mapPane">Map</a></li>
+        <li><a href="#plotsPane">Plots</a></li>
         <li><a href="#summaryPane">Summary</a></li>
         <li><a href="#helpPane">Help</a></li>
       </ul>
@@ -84,6 +85,9 @@
     </section>
     <section id="mapPane" class="pane">
       <div class="map"></div>
+    </section>
+    <section id="plotsPane" class="pane">
+      <div class="plots"></div>
     </section>
     <section id="summaryPane" class="pane">
       <div class="features"></div>
