refactor: use css classes instead of ids for features

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -87,7 +87,7 @@
       <div class="map"></div>
     </section>
     <section id="plotsPane" class="pane">
-      <div class="plots"></div>
+      <div class="features"></div>
     </section>
     <section id="summaryPane" class="pane">
       <div class="features"></div>
