--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -135,5 +135,6 @@
     <div id="statusBar" class="hide"></div>
   </body>
   <script src="lib/leaflet-0.7.7/leaflet.js"></script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="js/index.js"></script>
 </html>
