--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -25,8 +25,8 @@
         <h1>Earthquake Response App</h1>
         <p>This web application creates a map and summary to help collect and
           digest information used in talking points and scientific response.</p>
-        <p>Enter the <em>Mainshock</em> Event ID, then select &lsquo;Map&rsquo; or
-          &lsquo;Summary&rsquo;.</p>
+        <p>Enter the <em>Mainshock</em> Event ID, then select &lsquo;Map&rsquo;,
+          &lsquo;Plots&rsquo; or &lsquo;Summary&rsquo;.</p>
       </div>
       <div class="content darker">
         <form>
@@ -95,7 +95,7 @@
     <section id="helpPane" class="pane">
       <div class="content lighter">
         <h1>Earthquake Response App</h1>
-        <p>This web application creates a map and summary to help collect and
+        <p>This web application creates a map, plots and summary to help collect and
           digest information used in talking points and scientific response.</p>
         <h2>Instructions</h2>
         <ol>
@@ -115,11 +115,12 @@
             </ul>
           </li>
           <li>Tweak the parameters for <em>Aftershocks</em> /
-            <em>Historical Seismicity</em> <strong>(optional)</strong>
+            <em>Historical Seismicity</em> (optional)
             <p>Initial values will be set automatically based on the
               mainshock&rsquo;s magnitude and estimated rupture length.</p>
           </li>
-          <li>Select the &lsquo;Map&rsquo; or &lsquo;Summary&rsquo; tab</li>
+          <li>Select the &lsquo;Map&rsquo;, &lsquo;Plots&rsquo; or
+            &lsquo;Summary&rsquo; tab</li>
         </ol>
         <h2>Contact</h2>
         <ul>
