add view map button on edit pane

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -71,7 +71,8 @@
               pattern="^[0-9]+$" value="10" min="1" />
           </div>
           <div class="meta">
-            <input type="reset" class="reset" value="Reset" />
+            <button type="reset" class="reset">Reset</button>
+            <button type="button" class="viewmap" disabled>View Map &rarr;</button>
             <p class="required">* All fields are required</p>
           </div>
         </form>
