--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -7,7 +7,7 @@
       maximum-scale=1.0, user-scalable=0" />
     <title>Earthquake Response App</title>
     <link rel="manifest" href="manifest.json" />
-    <link rel="stylesheet" href="lib/leaflet-0.7.7/leaflet.css" />
+    <link rel="stylesheet" href="lib/leaflet/leaflet.css" />
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
@@ -136,7 +136,7 @@
     </section>
     <div id="statusBar" class="hide"></div>
   </body>
-  <script src="lib/leaflet-0.7.7/leaflet.js"></script>
+  <script src="lib/leaflet/leaflet.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="js/index.js"></script>
 </html>
