--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -116,7 +116,7 @@
           </li>
           <li>Tweak the parameters for <em>Aftershocks</em> /
             <em>Historical Seismicity</em> (optional)
-            <p>Initial values will be set automatically based on the
+            <p>Initial values are set automatically based on the
               mainshock&rsquo;s magnitude and estimated rupture length.</p>
           </li>
           <li>Select the &lsquo;Map&rsquo;, &lsquo;Plots&rsquo; or
