remove colon from header

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -106,7 +106,7 @@
               specific earthquake. For example:</p>
               <img src="img/eventid.png" alt="image showing the URL"
                 class="eventid" />
-            <h3>Find an Earthquake:</h3>
+            <h3>Find an Earthquake</h3>
             <ul class="find">
               <li><a href="https://earthquake.usgs.gov/earthquakes/map">Latest
                 Earthquakes</a></li>
