--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -25,8 +25,8 @@
         <h1>Earthquake Response App</h1>
         <p>This web application creates a map, plots and summary for an
           earthquake to help collect and digest information used in talking
-          points and scientific response. Curious? <a href="/response/?eqid=nc72282711">View
-          the 2014 Napa earthquake</a>.</p>
+          points and scientific response. Curious? Check out the
+          <a href="/response/?eqid=nc72282711">2014 Napa earthquake</a>.</p>
         <p>Enter the <em>Mainshock</em> Event ID, then select &lsquo;Map&rsquo;,
           &lsquo;Plots&rsquo; or &lsquo;Summary&rsquo;.</p>
       </div>
