--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -136,6 +136,6 @@
     <div id="statusBar" class="hide"></div>
   </body>
   <script src="lib/leaflet/leaflet.js"></script>
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="https://cdn.plot.ly/plotly-gl3d-latest.min.js"></script>
   <script src="js/index.js"></script>
 </html>
